# ai-voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: admin_call_logs.py  admin_tenants.py  health.py  plivo_stream.py  plivo_webhooks.py
app/audio/: __init__.py  bridge.py  codec.py  resample.py
app/core/: config.py  logging.py  metrics.py  security.py
app/db/: mongo.py  redis.py
app/domain/: enums.py  models.py
app/hms/: __init__.py  client.py  endpoints.py
app/prompts/: __init__.py  loader.py
app/providers/: __init__.py  base.py  registry.py
app/providers/gemini/: __init__.py  provider.py
app/providers/openai/: __init__.py  provider.py
app/repositories/: call_logs.py
app/services/: call_orchestrator.py  outbound.py
app/sessions/: __init__.py  manager.py  state.py
app/tenants/: __init__.py  cache.py  repository.py  resolver.py
app/tools/: __init__.py  base.py  definitions.py  helpers.py  router.py
app/tools/handlers/: __init__.py  (+4 more)
docs/: API.md  DEPLOYMENT.md  TESTING.md
frontend/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
scripts/: load_test_example.py
tests/: conftest.py
tests/integration/: test_audio_bridge.py  test_hms_client.py  test_plivo_answer.py
tests/unit/: test_book_appointment.py  test_caller_phone.py  test_codec_resample.py  test_hms_aligned_tools.py  test_prompt_loader.py  test_security.py  test_tenant_resolver.py  test_tools.py
(+6 files in other folders)
