[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-voice-agent"
version = "1.0.0"
description = "Production-grade real-time AI voice agent platform for Healeka"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "motor>=3.6.0",
    "redis[hiredis]>=5.2.0",
    "google-genai>=1.0.0",
    "plivo>=4.58.0",
    "soxr>=0.5.0",
    "numpy>=2.1.0",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
